--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meu Portifólio</title>
+    <title>Meu Portfólio</title>
+    <style>
+      body {
+        background-color: #181818;
+        font-family: monospace;
+        color: #ff019a;
+        text-align: center;
+      }
+      h1 {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      strong {
+        font-size: 1.25em;
+      }
+      em {
+        text-decoration: underline;
+      }
+      .skills-itens {
+        font-size: 16px;
+        line-height: 2em;
+      }
+      hr {
+        border: 1px dashed #ff019a;
+      }
+    </style>
   </head>
   <body>
     <ul>
@@ -14,7 +38,7 @@
     </ul>
     <h1>Paulo Willian</h1>
     <img
-      src="./assets/profile-photo.jpg"
+      src="./assets/images/profile-photo.jpg"
       alt="Imagem minha gerada por IA no estilo Synthwave "
       width="300px"
     />
@@ -26,13 +50,19 @@
       atualmente.
     </p>
 
+    <br />
+    <hr />
+    <br />
     <h2 id="skills">Habilidades</h2>
     <ul>
-      <li>HTMl</li>
-      <li>CSS</li>
-      <li>Suporte Windows</li>
+      <li class="skills-itens">HTMl</li>
+      <li class="skills-itens">CSS</li>
+      <li class="skills-itens">Suporte Windows</li>
     </ul>
 
+    <br />
+    <hr />
+    <br />
     <h3 id="recomendations">Recomendações</h3>
     <a href="https://www.tabnews.com.br/" target="_blank">Tab News</a>
     <br />
