--- a/index.html
+++ b/index.html
@@ -5,30 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu Portfólio</title>
-    <style>
-      body {
-        background-color: #181818;
-        font-family: monospace;
-        color: #ff019a;
-        text-align: center;
-      }
-      h1 {
-        font-family: Arial, Helvetica, sans-serif;
-      }
-      strong {
-        font-size: 1.25em;
-      }
-      em {
-        text-decoration: underline;
-      }
-      .skills-itens {
-        font-size: 16px;
-        line-height: 2em;
-      }
-      hr {
-        border: 1px dashed #ff019a;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <ul>
